support for automated ant build-lang task